--- a/clusters/k8s-na/argo-applications/jupyter.yaml
+++ b/clusters/k8s-na/argo-applications/jupyter.yaml
@@ -25,6 +25,11 @@ spec:
         proxy:
           service:
             type: ClusterIP
+        prePuller:
+          hook:
+            enabled: false
+          continuous:
+            enabled: false
         singleuser:
           # Defines the default image
           image:
