fix helm release name

--- a/clusters/k8s-na/argo-applications/clearml.yaml
+++ b/clusters/k8s-na/argo-applications/clearml.yaml
@@ -16,7 +16,7 @@ spec:
     repoURL:  https://allegroai.github.io/clearml-helm-charts
     targetRevision: 7.11.3
     helm:
-      releaseName: traefik
+      releaseName: clearml
       values: |
         apiserver:
           service:
