add clearml ingresses

--- a/manifests/traefik-configs/clearml.yaml
+++ b/manifests/traefik-configs/clearml.yaml
@@ -15,3 +15,41 @@ spec:
           port: 8080
   tls:
     secretName: ig-ingtra-net-tls
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: clearml
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`clearml-api.ig.ingtra.net`)
+      services:
+        - kind: Service
+          name: clearml-api
+          namespace: clearml
+          port: 8008
+  tls:
+    secretName: ig-ingtra-net-tls
+
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: clearml
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`clearml-file.ig.ingtra.net`)
+      services:
+        - kind: Service
+          name: clearml-fileserver
+          namespace: clearml
+          port: 8081
+  tls:
+    secretName: ig-ingtra-net-tls
