--- a/clusters/k8s-na/argo-applications/cert-manager.yaml
+++ b/clusters/k8s-na/argo-applications/cert-manager.yaml
@@ -24,7 +24,7 @@ spec:
             sidecar.istio.io/inject: "false"
         extraArgs:
           - --dns01-recursive-nameservers-only
-          - --dns01-recursive-nameservers=1.1.1.1:53,1.0.0.1:53
+          - --dns01-recursive-nameservers=https://1.1.1.1/dns-query,https://1.0.0.1/dns-query
   destination:
     server: https://kubernetes.default.svc
     namespace: cert-manager
