change cookie domain

--- a/clusters/k8s-na/argo-applications/clearml.yaml
+++ b/clusters/k8s-na/argo-applications/clearml.yaml
@@ -18,6 +18,8 @@ spec:
     helm:
       releaseName: clearml
       values: |
+        clearml:
+          cookieDomain: clearml.ig.ingtra.net
         apiserver:
           service:
             type: ClusterIP
