use persistent nodes

--- a/clusters/k8s-na/argo-applications/traefik.yaml
+++ b/clusters/k8s-na/argo-applications/traefik.yaml
@@ -20,6 +20,8 @@ spec:
       values: |
         deployment:
           replicas: 2
+        nodeSelector:
+          k8s.ingtra.net/persistent: "true"
         topologySpreadConstraints:
           - labelSelector:
               matchLabels:
