--- a/manifests/omniamni/bad-words-are-bad.yaml
+++ b/manifests/omniamni/bad-words-are-bad.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: bad-words-are-bad
 spec:
-  replicas: 1
+  replicas: 0
   selector:
     matchLabels:
       app.kubernetes.io/name: bad-words-are-bad
@@ -27,6 +27,7 @@ spec:
               cpu: "4"
               memory: 4Gi
       nodeSelector:
+        k8s.ingtra.net/persistent: "true"
         kubernetes.io/arch: amd64
 
 ---
