--- a/clusters/k8s-na/argo-applications/dagster.yaml
+++ b/clusters/k8s-na/argo-applications/dagster.yaml
@@ -32,6 +32,27 @@ spec:
               port: 3030
               envSecrets:
                 - name: dagster-aws-key
+        dagsterWebserver:
+          replicaCount: 1
+          image:
+            repository: docker.io/ingtranet/dagster
+            tag: 1.8.8
+            pullPolicy: Always
+        dagsterDaemon:
+          image:
+            repository: docker.io/ingtranet/dagster
+            tag: 1.8.8
+            pullPolicy: Always
+        runLauncher:
+          type: K8sRunLauncher
+          config:
+            k8sRunLauncher:
+              image:
+                repository: docker.io/ingtranet/dagster
+                tag: 1.8.8
+                pullPolicy: Always
+              envSecrets:
+                - name: dagster-aws-key
         computeLogManager:
           type: S3ComputeLogManager
           config:
@@ -42,12 +63,6 @@ spec:
               useSsl: true
               endpointUrl: https://s3.sf.ingtra.net
               skipEmptyFiles: false
-        runLauncher:
-          type: K8sRunLauncher
-          config:
-            k8sRunLauncher:
-              envSecrets:
-                - name: dagster-aws-key
         postgresql:
           enabled: false
           postgresqlHost: postgresql.vd.ingtra.net:5432
