remove port from postgresql host

--- a/clusters/k8s-na/argo-applications/dagster.yaml
+++ b/clusters/k8s-na/argo-applications/dagster.yaml
@@ -65,7 +65,7 @@ spec:
               skipEmptyFiles: false
         postgresql:
           enabled: false
-          postgresqlHost: postgresql.vd.ingtra.net:5432
+          postgresqlHost: postgresql.vd.ingtra.net
           postgresqlUsername: system
           postgresqlPassword: systemsecret
         
