add port for deployment

--- a/clusters/k8s-na/argo-applications/dagster.yaml
+++ b/clusters/k8s-na/argo-applications/dagster.yaml
@@ -31,6 +31,7 @@ spec:
                 - /code
                 - --module-name 
                 - ops.definitions
+              port: 3030
               envSecrets:
                 - name: dagster-aws-key
         dagsterWebserver:
