fix postgresql database

--- a/clusters/k8s-na/argo-applications/dagster.yaml
+++ b/clusters/k8s-na/argo-applications/dagster.yaml
@@ -70,7 +70,7 @@ spec:
           postgresqlHost: postgresql.vd.ingtra.net
           postgresqlUsername: system
           postgresqlPassword: systemsecret
-        
+          postgresqlDatabase: dagster
   destination:
     server: https://kubernetes.default.svc
     namespace: dagster
