--- a/manifests/traefik-configs/dagster.yaml
+++ b/manifests/traefik-configs/dagster.yaml
@@ -1,17 +1,17 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: amoro
+  name: dagster
 spec:
   entryPoints:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`amoro.ig.ingtra.net`)
+      match: Host(`dagster.ig.ingtra.net`)
       services:
         - kind: Service
-          name: amoro-rest
-          namespace: amoro
-          port: 1630
+          name: dagster-dagster-webserver
+          namespace: dagster
+          port: 80
   tls:
     secretName: ig-ingtra-net-tls
