--- a/clusters/k8s-na/argo-applications/jupyter.yaml
+++ b/clusters/k8s-na/argo-applications/jupyter.yaml
@@ -37,6 +37,20 @@ spec:
             tag: "2024-09-16"
           networkPolicy:
             enabled: false
+          allowPrivilegeEscalation: true
+          extraEnv:
+            - name: CLEARML_WEB_HOST
+              value: https://app.clearml.ig.ingtra.net
+            - name: CLEARML_API_HOST
+              value: https://api.clearml.ig.ingtra.net
+            - name: CLEARML_FILES_HOST
+              value: https://files.clearml.ig.ingtra.net
+            - name: CLEARML_API_ACCESS_KEY
+              value: 3J5SAEPD5RCL11EGWOIQ5XP85XCAQ7
+            - name: CLEARML_API_SECRET_KEY
+              value: DdbtoHKh7k0SQq5nUtFwoGvAt_TRmW351ZVtRn2QH_PsgSNTXlXK1LDz5byoRf-PScU
+            - name: CLEARML_LOG_MODEL
+              value: FALSE
           profileList:
             - display_name: "Default environment"
               description: "The default image."
