--- a/clusters/k8s-na/argo-applications/jupyter.yaml
+++ b/clusters/k8s-na/argo-applications/jupyter.yaml
@@ -39,6 +39,7 @@ spec:
             enabled: false
           allowPrivilegeEscalation: true
           extraEnv:
+            GRANT_SUDO: "yes"
             CLEARML_WEB_HOST: https://app.clearml.ig.ingtra.net
             CLEARML_API_HOST: https://api.clearml.ig.ingtra.net
             CLEARML_FILES_HOST: https://files.clearml.ig.ingtra.net
