--- a/clusters/k8s-na/argo-applications/jupyter.yaml
+++ b/clusters/k8s-na/argo-applications/jupyter.yaml
@@ -37,6 +37,7 @@ spec:
             tag: "2024-09-16"
           networkPolicy:
             enabled: false
+          uid: 0
           allowPrivilegeEscalation: true
           extraEnv:
             GRANT_SUDO: "yes"
