--- a/manifests/ollama/deployment.yaml
+++ b/manifests/ollama/deployment.yaml
@@ -17,6 +17,11 @@ spec:
     spec:
       nodeSelector:
         nvidia.com/gpu.product: Orin
+      tolerations:
+        - key: "ingtra.net/gpu"
+          operator: "Equal"
+          value: "true"
+          effect: "NoSchedule"
       runtimeClassName: nvidia
       containers:
         - name: ollama
