--- a/clusters/k8s-na/argo-applications/fission.yaml
+++ b/clusters/k8s-na/argo-applications/fission.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: fission-system
+  name: fission
 
 ---
 apiVersion: argoproj.io/v1alpha1
