--- a/clusters/k8s-na/argo-applications/coder.yaml
+++ b/clusters/k8s-na/argo-applications/coder.yaml
@@ -27,6 +27,8 @@ spec:
                   key: coder-db-url
             - name: CODER_ACCESS_URL
               value: "https://coder.ig.ingtra.net"
+          sevice:
+            type: ClusterIP
   destination:
     server: https://kubernetes.default.svc
     namespace: coder
