--- a/clusters/k8s-na/argo-applications/kubero.yaml
+++ b/clusters/k8s-na/argo-applications/kubero.yaml
@@ -14,7 +14,9 @@ spec:
   sources:
     - repoURL: https://github.com/kubero-dev/kubero-operator.git
       targetRevision: v0.1.5
-      path: deploy/operator.0.1.5.yaml
+      path: deploy
+      directory:
+        include: operator.0.1.5.yaml
     - repoURL: https://github.com/ingtranet/argocd-manifests.git
       path: manifests/kubero-configs
       targetRevision: HEAD
