--- a/clusters/k8s-na/argo-applications/kubero.yaml
+++ b/clusters/k8s-na/argo-applications/kubero.yaml
@@ -22,4 +22,4 @@ spec:
       targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: jupyter
+    namespace: kubero
