--- a/manifests/csi-driver-nfs-configs/trino-exchange.yaml
+++ b/manifests/csi-driver-nfs-configs/trino-exchange.yaml
@@ -1,26 +1,26 @@
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: trino-exchange
-  annotations:
-    pv.kubernetes.io/provisioned-by: nfs.csi.k8s.io
-spec:
-  capacity:
-    storage: 100Gi
-  accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Delete
-  mountOptions:
-    - nfsvers=4.1
-    - mountPermissions=0
-  csi:
-    driver: nfs.csi.k8s.io
-    volumeHandle: "synology.dv.ingtra.net#volume1/k8s#na/nfs-csi/trino-exchange#"
-    volumeAttributes:
-      server: synology.dv.ingtra.net
-      share: /volume1/k8s
-      subDir: na/nfs-csi/trino-exchange
-  storageClassName: synology-nfs-csi
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: trino-exchange
+#   annotations:
+#     pv.kubernetes.io/provisioned-by: nfs.csi.k8s.io
+# spec:
+#   capacity:
+#     storage: 100Gi
+#   accessModes:
+#     - ReadWriteMany
+#   persistentVolumeReclaimPolicy: Delete
+#   mountOptions:
+#     - nfsvers=4.1
+#     - mountPermissions=0
+#   csi:
+#     driver: nfs.csi.k8s.io
+#     volumeHandle: "synology.dv.ingtra.net#volume1/k8s#na/nfs-csi/trino-exchange#"
+#     volumeAttributes:
+#       server: synology.dv.ingtra.net
+#       share: /volume1/k8s
+#       subDir: na/nfs-csi/trino-exchange
+#   storageClassName: synology-nfs-csi
 
 ---
 kind: PersistentVolumeClaim
@@ -34,4 +34,3 @@ spec:
   resources:
     requests:
       storage: 100Gi
-  volumeName: trino-exchange
