--- a/manifests/csi-driver-nfs-configs/storageclass.yaml
+++ b/manifests/csi-driver-nfs-configs/storageclass.yaml
@@ -10,8 +10,8 @@ parameters:
   server: synology.dv.ingtra.net
   share: /volume1/k8s
   subDir: na/nfs-csi/${pv.metadata.name}
+  mountPermissions: 0
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
   - nfsvers=4.1
-  - mountPermissions=0
