--- a/manifests/csi-driver-nfs-configs/storageclass.yaml
+++ b/manifests/csi-driver-nfs-configs/storageclass.yaml
@@ -10,7 +10,7 @@ parameters:
   server: synology.dv.ingtra.net
   share: /volume1/k8s
   subDir: na/nfs-csi/${pv.metadata.name}
-  mountPermissions: 0
+  mountPermissions: "0"
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
 mountOptions:
