--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -136,6 +136,22 @@ spec:
             s3.aws-secret-key=systemsecret
             s3.socket-connect-timeout=20s
             s3.socket-read-timeout=20s
+          iceberg_amoro: |
+            connector.name=iceberg
+            iceberg.catalog.type=rest
+            iceberg.rest-catalog.security=NONE
+            iceberg.rest-catalog.uri=https://amoro.ig.ingtra.net/api/iceberg/rest
+            iceberg.rest-catalog.vended-credentials-enabled=false
+            iceberg.register-table-procedure.enabled=true
+            iceberg.target-max-file-size=64MB
+            fs.native-s3.enabled=true
+            s3.endpoint=https://s3.sf.ingtra.net
+            s3.path-style-access=false
+            s3.region=us-west-1
+            s3.aws-access-key=system
+            s3.aws-secret-key=systemsecret
+            s3.socket-connect-timeout=20s
+            s3.socket-read-timeout=20s
         additionalConfigProperties:
           - sql.default-catalog=iceberg
           - spill-enabled=true
