--- a/clusters/k8s-na/argo-applications/trino.yaml
+++ b/clusters/k8s-na/argo-applications/trino.yaml
@@ -141,6 +141,7 @@ spec:
             iceberg.catalog.type=rest
             iceberg.rest-catalog.security=NONE
             iceberg.rest-catalog.uri=https://amoro.ig.ingtra.net/api/iceberg/rest
+            iceberg.rest-catalog.warehouse=s3://iceberg
             iceberg.rest-catalog.vended-credentials-enabled=false
             iceberg.register-table-procedure.enabled=true
             iceberg.target-max-file-size=64MB
