--- a/clusters/k8s-na/argo-applications/amoro.yaml
+++ b/clusters/k8s-na/argo-applications/amoro.yaml
@@ -21,6 +21,10 @@ spec:
         clusterDomain: kn.ingtra.net
         image:
           tag: "0.7.1-incubating"
+        jvmOptions: |
+          -Xms3g
+          -Xmx3g
+          -XX:+UseShenandoahGC
         amoroConf:
           database:
             type: mysql
