--- a/clusters/k8s-na/argo-applications/amoro.yaml
+++ b/clusters/k8s-na/argo-applications/amoro.yaml
@@ -26,12 +26,42 @@ spec:
           xmx=3072
           gc=UseShenandoahGC
         amoroConf:
-          database:
-            type: mysql
-            driver: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://mysql.vd.ingtra.net:3306/amoro?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useAffectedRows=true&allowPublicKeyRetrieval=true&useSSL=false
-            username: system
-            password: systemsecret
+          amoroDefaults:
+            ams:
+              self-optimizing:
+                enabled: true
+                target-size: 67108864
+                max-task-size-bytes: 67108864
+              expire-snapshots:
+                enabled: true
+                thread-count: 10
+              clean-orphan-files:
+                enabled: false
+                thread-count: 10
+                interval: 1d
+              clean-dangling-delete-files:
+                enabled: false
+                thread-count: 10
+              sync-hive-tables:
+                enabled: false
+                thread-count: 10
+              data-expiration:
+                enabled: false
+                thread-count: 10
+                interval: 1d
+              auto-create-tags:
+                enabled: false
+                thread-count: 3
+                interval: 60000 # 1min
+              database:
+                type: mysql
+                jdbc-driver-class: com.mysql.cj.jdbc.Driver
+                url: jdbc:mysql://mysql.vd.ingtra.net:3306/amoro?useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useAffectedRows=true&allowPublicKeyRetrieval=true&useSSL=false
+                username: system
+                password: systemsecret
+                connection-pool-max-total: 20
+                connection-pool-max-idle: 16
+                connection-pool-max-wait-millis: 1000
         optimizer:
           local:
             enabled: false
