make configs to string

--- a/clusters/k8s-na/argo-applications/amoro.yaml
+++ b/clusters/k8s-na/argo-applications/amoro.yaml
@@ -26,7 +26,7 @@ spec:
           xmx=3072
           gc=UseShenandoahGC
         amoroConf:
-          amoroDefaults:
+          amoroDefaults: |
             ams:
               self-optimizing:
                 enabled: true
