Revert "upgrade nessie configs"
This reverts commit 402d41cd8f17e4aa7dd228255cdd0ecf0964b6be.

--- a/clusters/k8s-na/argo-applications/nessie.yaml
+++ b/clusters/k8s-na/argo-applications/nessie.yaml
@@ -69,20 +69,14 @@ spec:
             name: nessie-db
             username: username
             password: password
-        catalog:
-          storage:
-            s3:
-              defaultOptions:
-                accessKeySecret:
-                  awsAccessKeyId: system
-                  accessKeySecret: systemsecret
-                endpoint: https://s3.sf.ingtra.net
-                region: us-west-1
-          iceberg:
-            defaultWarehouse: iceberg
-            warehouses:
-              - name: iceberg
-                location: s3://iceberg
+        advancedConfig:
+          nessie.catalog.service.s3.default-options.region: us-west-2
+          nessie.catalog.service.s3.default-options.access-key.name: system
+          nessie.catalog.service.s3.default-options.access-key.secret: systemsecret
+          nessie.catalog.service.s3.default-options.endpoint: https://s3.sf.ingtra.net
+          nessie.catalog.default-warehouse: iceberg
+          nessie.catalog.warehouses.iceberg.location: s3://iceberg
+          
   destination:
     server: https://kubernetes.default.svc
     namespace: nessie
