--- a/clusters/k8s-na/argo-applications/nvidia-device-plugin.yaml
+++ b/clusters/k8s-na/argo-applications/nvidia-device-plugin.yaml
@@ -40,7 +40,7 @@ spec:
         nfd:
           worker:
             tolerations:
-              - key: nvidia.com/gpu
+              - key: ingtra.net/gpu
                 operator: Equal
                 value: "true"
                 effect: NoSchedule
