--- a/manifests/comfy-ui/deployment.yaml
+++ b/manifests/comfy-ui/deployment.yaml
@@ -10,8 +10,10 @@ spec:
   nfs:
     path: "/volume1/k8s/pv/comfy-ui/pv-comfy-ui"
     server: synology.dv.ingtra.net
+    readOnly: false
   mountOptions:
     - nfsvers=4.1
+  persistentVolumeReclaimPolicy: Retain
 
 ---
 apiVersion: v1
@@ -19,6 +21,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: pvc-comfy-ui
 spec:
+  storageClassName: ""
+  volumeName: pv-comfy-ui
   accessModes:
     - ReadWriteMany
   resources:
