--- a/manifests/comfy-ui/deployment.yaml
+++ b/manifests/comfy-ui/deployment.yaml
@@ -11,6 +11,8 @@ spec:
     path: "/volume1/k8s/pv/comfy-ui/pv-comfy-ui"
     server: synology.dv.ingtra.net
     readOnly: false
+  mountOptions:
+    - nfsvers=4.1
   persistentVolumeReclaimPolicy: Retain
 
 ---
