--- a/manifests/metallb-configs/bgp.yaml
+++ b/manifests/metallb-configs/bgp.yaml
@@ -1,7 +1,7 @@
 apiVersion: metallb.io/v1beta1
 kind: BGPAdvertisement
 metadata:
-  name: external
+  name: default
   namespace: metallb-system
 spec:
   ipAddressPools:
