--- a/manifests/local-ai-configs/manifest.yaml
+++ b/manifests/local-ai-configs/manifest.yaml
@@ -19,9 +19,13 @@ spec:
           operator: "Equal"
           value: "true"
           effect: "NoSchedule"
+      runtimeClassName: nvidia
       containers:
         - name: local-ai
           image: quay.io/go-skynet/local-ai:v2.26.0-nvidia-l4t-arm64-core
+          env:
+            - name: NVIDIA_VISIBLE_DEVICES
+              value: "all"
           ports:
             - containerPort: 8080
           volumeMounts:
